# samesame

./: .gitignore  404.html  CONTEXT.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
api/advanced/: index.html
api/bayes/: index.html
api/bayes_factors/: index.html
api/ctst/: index.html
api/importance_weights/: index.html
api/logit_scores/: index.html
api/metrics/: index.html
api/nit/: index.html
api/ood/: index.html
api/testing/: index.html
api/weighting/: index.html
docs/: index.md
docs/api/: advanced.md  bayes.md  bayes_factors.md  ctst.md  importance_weights.md  iw.md  logit_scores.md  metrics.md  nit.md  ood.md  testing.md  weighting.md
docs/examples/: credit-example.md  credit-ood-detection.md  distribution-shifts.md  noninferiority.md
docs/examples/credit/: monitor-confidence-ood.md  monitor-credit-risk.md  monitor-prediction-errors.md
docs/examples/tutorials/: adjust-for-covariate-shift.md  check-shift-harm.md  (+1 more)
docs/explanation/: importance-weights-rationale.md
examples/covariate-balance/: index.html
examples/credit-example/: index.html
examples/credit-ood-detection/: index.html
examples/distribution-shifts/: index.html
examples/noninferiority/: index.html
explanation/importance-weights-rationale/: index.html
prd-sample-weights/: index.html
search/: search_index.json
spec/: PRD-importance-weights-docs-roadmap.md  PRD-teh-module.md  spec-design-context-aware-riw-weighting.md  spec-design-task-first-api.md
src/samesame/: __init__.py  _api.py  _bayesboot.py  _data.py  _metrics.py  _parallel.py  _permute.py  _stats.py  _types.py  _utils.py  _wecdf.py  _weighting.py  advanced.py  bayes.py  bayes_factors.py  ctst.py  importance_weights.py  iw.py  logit_scores.py  metrics.py  nit.py  ood.py  weighting.py  weights.py
tests/: __init__.py  conftest.py  test_api.py  test_autotst.py  test_bayes.py  test_ctst.py  test_internal_helpers.py  test_iw.py  test_metrics.py  test_nit.py  test_ood.py
(+10 files in other folders)
